--- a/package.json
+++ b/package.json
@@ -11,21 +11,22 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^4.15.3",
-    "@astrojs/tailwind": "^5.1.0",
     "@astrojs/react": "^3.0.10",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "tailwindcss": "^3.4.1",
-    "gsap": "^3.12.5",
-    "@studio-freight/lenis": "^1.0.39",
-    "three": "^0.162.0",
-    "@react-three/fiber": "^8.15.19",
+    "@astrojs/tailwind": "^5.1.0",
     "@react-three/drei": "^9.102.3",
-    "framer-motion": "^11.0.8",
-    "@types/three": "^0.162.0",
+    "@react-three/fiber": "^8.15.19",
+    "@studio-freight/lenis": "^1.0.39",
     "@types/react": "^18.2.64",
     "@types/react-dom": "^18.2.21",
-    "locomotive-scroll": "4.1.4"
+    "@types/three": "^0.162.0",
+    "astro": "^4.15.3",
+    "framer-motion": "^11.0.8",
+    "gsap": "^3.12.5",
+    "locomotive-scroll": "4.1.4",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-icons": "^5.4.0",
+    "tailwindcss": "^3.4.1",
+    "three": "^0.162.0"
   }
 }
