--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-three/drei": "^9.102.3",
     "@react-three/fiber": "^8.15.19",
     "@studio-freight/lenis": "^1.0.39",
+    "@tailwindcss/typography": "^0.5.16",
     "@types/react": "^18.2.64",
     "@types/react-dom": "^18.2.21",
     "@types/three": "^0.162.0",
@@ -27,6 +28,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^5.4.0",
     "tailwindcss": "^3.4.1",
+    "tailwindcss-animate": "^1.0.7",
     "three": "^0.162.0"
   }
 }
