--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@astrojs/react": "^3.0.10",
     "@astrojs/tailwind": "^5.1.0",
+    "@react-pdf/renderer": "^4.1.6",
     "@react-three/drei": "^9.102.3",
     "@react-three/fiber": "^8.15.19",
     "@studio-freight/lenis": "^1.0.39",
@@ -24,9 +25,11 @@
     "framer-motion": "^11.0.8",
     "gsap": "^3.12.5",
     "locomotive-scroll": "4.1.4",
+    "pdfjs-dist": "^4.10.38",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.4.0",
+    "react-pdf": "^9.2.1",
     "tailwindcss": "^3.4.1",
     "tailwindcss-animate": "^1.0.7",
     "three": "^0.162.0"
